syntax = "proto3";

package rpc_campaign;

option go_package = "github.com/loveo2d/CouponIssuanceSystem/internal/api/proto/campaign";

import "google/protobuf/timestamp.proto";

message GetCampaignRequest {
    int32 campaign_id = 1;
}

message GetCampaignResponse {
    int32 campaign_id = 1;
    string title = 2;
    int32 coupon_remains = 3;
    google.protobuf.Timestamp begin_at = 4;
}
